Fixed spacing and styling in resume

--- a/cecil-susi/style.css
+++ b/cecil-susi/style.css
@@ -69,6 +69,10 @@ ul {
   border-radius: 1.5rem;
 }
 
+.hero-tagline {
+  font-size: 2rem;
+}
+
 .ring-links {
   margin: 1rem;
   border-radius: 1.5rem;
@@ -117,7 +121,7 @@ ul {
 .name {
   font-family: "Sekuya", regular;
   font-weight: 400;
-  font-size: 3rem;
+  font-size: 3.25rem;
 }
 
 .position-title {
@@ -139,7 +143,7 @@ ul {
   font-weight: 400;
   background: rgb(190, 87, 19);
   color: rgb(238, 181, 131);
-  font-size: 3rem;
+  font-size: 2.8rem;
   margin-bottom: 1.5rem;
   padding: 1rem;
 }
@@ -175,7 +179,7 @@ ul {
   font-weight: 400;
   background: rgb(164, 48, 16);
   color: rgb(232, 139, 96);
-  font-size: 3rem;
+  font-size: 2.8rem;
   margin-bottom: 1.5rem;
   padding: 1rem;
 }
@@ -194,7 +198,7 @@ ul {
   font-weight: 400;
   background: rgb(190, 87, 19);
   color: rgb(238, 181, 131);
-  font-size: 3rem;
+  font-size: 2.8rem;
   margin-bottom: 1.5rem;
   padding: 1rem;
 }
